--- a/package.json
+++ b/package.json
@@ -112,6 +112,7 @@
     "io-ts": "^2.2.4",
     "jsonwebtoken": "^8.5.1",
     "lens-shmens": "^1.2.0",
+    "micro-memoize": "^4.1.2",
     "micromark": "^2.11.4",
     "micromark-extension-gfm": "^0.3.3",
     "mock-match-media": "^0.4.2",
