Fix highlighter builder command

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build:stage": "yarn docs && NODE_ENV=production STAGE=1 yarn build:dev && yarn plannerhighlighter && yarn blog",
     "analyze": "open dist/report.html",
     "docs": "generate-md --layout ./src/docs/layout/ --input ./src/docs/content/ --output ./docs",
-    "plannerhighlighter": "tsc --outDir dist-plannerhighlighter ./src/pages/planner/plannerHighlighter.ts",
+    "plannerhighlighter": "tsc --skipLibCheck --outDir dist-plannerhighlighter ./src/pages/planner/plannerHighlighter.ts",
     "blog": "eleventy",
     "build:server": "webpack --config webpack.server.config.js",
     "build:dev": "webpack",
