Improve syncing mechanism, make programs save explicit

--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@types/mocha": "^10.0.6",
     "@types/papaparse": "^5.3.7",
     "@types/prismjs": "^1.16.6",
+    "@types/pulltorefreshjs": "^0.1.7",
     "@types/qrcode": "^1.5.3",
     "@types/sinon": "^17.0.2",
     "@types/upng-js": "^2.1.2",
@@ -123,6 +124,7 @@
     "preact": "^10.5.13",
     "preact-render-to-string": "^5.1.19",
     "prismjs": "^1.25.0",
+    "pulltorefreshjs": "^0.1.22",
     "qrcode": "^1.5.3",
     "rollbar": "^2.26.2",
     "rsa-pem-from-mod-exp": "^0.8.5",
