--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "@types/upng-js": "^2.1.2",
     "@typescript-eslint/eslint-plugin": "^4.2.0",
     "@typescript-eslint/parser": "^4.2.0",
-    "autoprefixer": "^9.7.4",
+    "autoprefixer": "^10.4.20",
     "aws-sdk": "^2.1395.0",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^9.1.2",
@@ -80,11 +80,11 @@
     "mini-css-extract-plugin": "^0.9.0",
     "mocha": "^10.2.0",
     "node-fetch": "^2.6.1",
-    "postcss-loader": "^3.0.0",
+    "postcss-loader": "^4.0.3",
     "prettier": "^2.0.5",
     "sinon": "^17.0.1",
     "style-loader": "^1.1.3",
-    "tailwindcss": "^1.2.0",
+    "tailwindcss": "^2.2.19",
     "ts-loader": "^6.2.1",
     "ts-node": "^8.6.2",
     "ts-node-dev": "^1.1.6",
@@ -121,6 +121,7 @@
     "mock-match-media": "^0.4.2",
     "openai": "^3.2.1",
     "papaparse": "^5.4.1",
+    "postcss": "^8.2.14",
     "preact": "^10.5.13",
     "preact-render-to-string": "^5.1.19",
     "prismjs": "^1.25.0",
