Add sitemap generator

--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "App for tracking weight lifting progress",
   "main": "dist/index.js",
   "scripts": {
-    "build": "yarn docs && NODE_ENV=production yarn build:dev && yarn plannerhighlighter && yarn blog",
-    "build:stage": "yarn docs && NODE_ENV=production STAGE=1 yarn build:dev && yarn plannerhighlighter && yarn blog",
+    "build": "yarn blog && yarn docs && yarn sitemap && NODE_ENV=production yarn build:dev && yarn plannerhighlighter",
+    "build:stage": "yarn blog && yarn docs && yarn sitemap && NODE_ENV=production STAGE=1 yarn build:dev && yarn plannerhighlighter",
     "analyze": "open dist/report.html",
     "docs": "generate-md --layout ./src/docs/layout/ --input ./src/docs/content/ --output ./docs",
     "plannerhighlighter": "tsc --skipLibCheck --outDir dist-plannerhighlighter ./src/pages/planner/plannerHighlighter.ts",
