Add sitemap command

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "cdk-deploy": "yarn upload-source-maps && yarn build:lambda && rm -rf ./dist-lambda/node_modules && cdk deploy --all",
     "test": "mocha -r ts-node/register test/**/*.test.ts",
     "onetest": "TS_NODE_TRANSPILE_ONLY=1 yarn mocha -r ts-node/register",
+    "sitemap": "TS_NODE_TRANSPILE_ONLY=1 yarn ts-node ./src/sitemap.ts",
     "testgen": "playwright codegen --test-id-attribute data-cy 'https://local.liftosaur.com:8080/app/?skipintro=1'"
   },
   "author": "Anton Astashov",
