--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "App for tracking weight lifting progress",
   "main": "dist/index.js",
   "scripts": {
-    "build": "yarn plannerhighlighter && yarn blog && yarn docs && yarn sitemap && NODE_ENV=production yarn build:dev",
+    "build": "yarn plannerhighlighter && yarn blog && yarn docs && yarn sitemap && NODE_ENV=production yarn build:dev && yarn upload-source-maps",
     "build:stage": "yarn plannerhighlighter && yarn blog && yarn docs && yarn sitemap && NODE_ENV=production STAGE=1 yarn build:dev",
     "analyze": "open dist/report.html",
     "docs": "generate-md --layout ./src/docs/layout/ --input ./src/docs/content/ --output ./docs",
@@ -29,8 +29,8 @@
     "start:lambda": "yarn cdk-synth && yarn sam-start-api",
     "sam-start-api": "sam local start-api --skip-pull-image 2>&1 | tr \"\\r\" \"\\n\"",
     "cdk-synth": "cdk synth --no-staging LiftosaurStackDev > template.yaml",
-    "upload-source-maps": "rm -rf ./dist && NODE_ENV=production yarn build:dev && ./uploadsourcemaps.sh",
-    "cdk-deploy": "yarn upload-source-maps && yarn build:lambda && rm -rf ./dist-lambda/node_modules && cdk deploy --all",
+    "upload-source-maps": "./uploadsourcemaps.sh",
+    "cdk-deploy": "yarn build:lambda && rm -rf ./dist-lambda/node_modules && cdk deploy --all",
     "test": "mocha -r ts-node/register test/**/*.test.ts",
     "onetest": "TS_NODE_TRANSPILE_ONLY=1 yarn mocha -r ts-node/register",
     "sitemap": "TS_NODE_TRANSPILE_ONLY=1 yarn ts-node ./src/sitemap.ts",
