--- a/package.json
+++ b/package.json
@@ -113,6 +113,7 @@
     "dequal": "^2.0.2",
     "fflate": "^0.7.4",
     "fp-ts": "^2.6.2",
+    "html-to-image": "^1.11.11",
     "io-ts": "^2.2.4",
     "jsonwebtoken": "^8.5.1",
     "lens-shmens": "^1.2.0",
