--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "App for tracking weight lifting progress",
   "main": "dist/index.js",
   "scripts": {
-    "build": "yarn plannerhighlighter && yarn blog && yarn docs && yarn sitemap && NODE_ENV=production yarn build:dev && yarn upload-source-maps",
-    "build:stage": "yarn plannerhighlighter && yarn blog && yarn docs && yarn sitemap && NODE_ENV=production STAGE=1 yarn build:dev",
+    "build": "npm run plannerhighlighter && npm run blog && npm run docs && npm run sitemap && NODE_ENV=production npm run build:dev && npm run upload-source-maps",
+    "build:stage": "npm run plannerhighlighter && npm run blog && npm run docs && npm run sitemap && NODE_ENV=production STAGE=1 npm run build:dev",
     "analyze": "open dist/report.html",
     "docs": "generate-md --layout ./src/docs/layout/ --input ./src/docs/content/ --output ./docs",
     "plannerhighlighter": "tsc --skipLibCheck --outDir dist-plannerhighlighter ./src/pages/planner/plannerHighlighter.ts",
@@ -14,8 +14,8 @@
     "build:dev": "webpack",
     "lint": "tsc --listFiles | grep -v 'node_modules' | xargs eslint",
     "start": "webpack-dev-server",
-    "start:server": "IS_DEV=true IS_LOCAL=true IMGPREFIX=lambda/ yarn ts-node-dev --inspect --files --poll -T devserver.ts",
-    "start:server:prod": "IS_DEV=false IS_LOCAL=false IMGPREFIX=lambda/ yarn ts-node-dev --inspect --files --poll -T devserver.ts",
+    "start:server": "IS_DEV=true IS_LOCAL=true IMGPREFIX=lambda/ ts-node-dev --inspect --files --poll -T devserver.ts",
+    "start:server:prod": "IS_DEV=false IS_LOCAL=false IMGPREFIX=lambda/ npm run ts-node-dev --inspect --files --poll -T devserver.ts",
     "trust": "sudo security add-trusted-cert -d -r trustRoot -k /Library/Keychains/System.keychain cert/private.crt",
     "start:https": "webpack-dev-server --https --cert cert/private.pem --key cert/private.key --port 8443",
     "migrate": "curl -v -X POST http://local-api.liftosaur.com:3000/api/migrate?key=$KEY",
@@ -23,17 +23,17 @@
     "synctoprod": "curl -v -X POST http://local-api.liftosaur.com:3000/api/synctoprod?ids=$IDS\\&key=$KEY",
     "synctodev": "curl -v -X POST http://local-api.liftosaur.com:3000/api/synctodev?ids=$IDS\\&key=$KEY",
     "copy:lambda": "mkdir -p ./dist-lambda && cp ./lambda/package*.json ./dist-lambda && cp -r ./lambda/images ./dist-lambda",
-    "build:lambda": "yarn copy:lambda && yarn tsc -p tsconfig.lambda.json",
-    "watch:lambda": "yarn copy:lambda && yarn tsc -p tsconfig.lambda.json --watch",
-    "build-and-start:lambda": "yarn build:lambda && yarn start:lambda",
-    "start:lambda": "yarn cdk-synth && yarn sam-start-api",
+    "build:lambda": "npm run copy:lambda && tsc -p tsconfig.lambda.json",
+    "watch:lambda": "npm run copy:lambda && tsc -p tsconfig.lambda.json --watch",
+    "build-and-start:lambda": "npm run build:lambda && npm run start:lambda",
+    "start:lambda": "cdk-synth && sam-start-api",
     "sam-start-api": "sam local start-api --skip-pull-image 2>&1 | tr \"\\r\" \"\\n\"",
     "cdk-synth": "cdk synth --no-staging LiftosaurStackDev > template.yaml",
     "upload-source-maps": "./uploadsourcemaps.sh",
-    "cdk-deploy": "yarn build:lambda && rm -rf ./dist-lambda/node_modules && cdk deploy --all",
+    "cdk-deploy": "npm run build:lambda && rm -rf ./dist-lambda/node_modules && cdk deploy --all",
     "test": "mocha -r ts-node/register test/**/*.test.ts",
-    "onetest": "TS_NODE_TRANSPILE_ONLY=1 yarn mocha -r ts-node/register",
-    "sitemap": "TS_NODE_TRANSPILE_ONLY=1 yarn ts-node ./src/sitemap.ts",
+    "onetest": "TS_NODE_TRANSPILE_ONLY=1 mocha -r ts-node/register",
+    "sitemap": "TS_NODE_TRANSPILE_ONLY=1 ts-node ./src/sitemap.ts",
     "testgen": "playwright codegen --test-id-attribute data-cy 'https://local.liftosaur.com:8080/app/?skipintro=1'"
   },
   "author": "Anton Astashov",
@@ -78,7 +78,6 @@
     "jimp": "^0.16.1",
     "lambda-local": "^1.7.4",
     "markdown-styles": "^3.1.10",
-    "mini-css-extract-plugin": "^0.9.0",
     "mocha": "^10.2.0",
     "node-fetch": "^2.6.1",
     "postcss-loader": "^3.0.0",
@@ -96,13 +95,14 @@
     "webpack-dev-server": "^4.11.1"
   },
   "dependencies": {
-    "@codemirror/autocomplete": "^6.8.1",
-    "@codemirror/commands": "^6.2.4",
-    "@codemirror/language": "^6.8.0",
-    "@codemirror/lint": "^6.4.2",
-    "@codemirror/search": "^6.5.5",
-    "@codemirror/state": "^6.2.1",
-    "@codemirror/view": "^6.14.0",
+    "@codemirror/autocomplete": "^6.18.3",
+    "@codemirror/commands": "^6.7.1",
+    "@codemirror/lang-markdown": "^6.3.1",
+    "@codemirror/language": "^6.10.6",
+    "@codemirror/lint": "^6.8.4",
+    "@codemirror/search": "^6.5.8",
+    "@codemirror/state": "^6.5.0",
+    "@codemirror/view": "^6.35.3",
     "@lezer/highlight": "^1.1.6",
     "@lezer/lr": "^1.3.7",
     "aws-cdk-lib": "^2.83.1",
@@ -119,6 +119,7 @@
     "micro-memoize": "^4.1.2",
     "micromark": "^2.11.4",
     "micromark-extension-gfm": "^0.3.3",
+    "mini-css-extract-plugin": "^2.9.2",
     "mock-match-media": "^0.4.2",
     "openai": "^3.2.1",
     "papaparse": "^5.4.1",
