--- a/lambda/package.json
+++ b/lambda/package.json
@@ -6,13 +6,14 @@
   "author": "Anton Astashov",
   "license": "MIT",
   "dependencies": {
-    "@codemirror/autocomplete": "^6.8.1",
-    "@codemirror/commands": "^6.2.4",
-    "@codemirror/language": "^6.8.0",
-    "@codemirror/lint": "^6.4.2",
-    "@codemirror/search": "^6.5.0",
-    "@codemirror/state": "^6.2.1",
-    "@codemirror/view": "^6.14.1",
+    "@codemirror/autocomplete": "^6.18.3",
+    "@codemirror/commands": "^6.7.1",
+    "@codemirror/lang-markdown": "^6.3.1",
+    "@codemirror/language": "^6.10.6",
+    "@codemirror/lint": "^6.8.4",
+    "@codemirror/search": "^6.5.8",
+    "@codemirror/state": "^6.5.0",
+    "@codemirror/view": "^6.35.3",
     "@lezer/lr": "^1.3.4",
     "aws-sdk": "^2.1603.0",
     "cookie": "^0.4.1",
