--- a/lambda/package.json
+++ b/lambda/package.json
@@ -21,6 +21,7 @@
     "dequal": "^2.0.3",
     "fflate": "^0.7.4",
     "fp-ts": "^2.9.5",
+    "html-to-image": "^1.11.11",
     "io-ts": "^2.2.16",
     "jimp": "^0.16.1",
     "jsonwebtoken": "^8.5.1",
