--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
     "@fullhuman/postcss-purgecss": "^2.1.0",
     "@lezer/generator": "^1.2.3",
     "@playwright/test": "^1.44.0",
+    "@react-native-community/cli": "^15.1.3",
+    "@react-native/metro-config": "^0.76.5",
     "@types/aws-lambda": "^8.10.72",
     "@types/chai": "^4.3.11",
     "@types/cookie": "^0.3.3",
@@ -57,8 +59,8 @@
     "@types/prismjs": "^1.16.6",
     "@types/pulltorefreshjs": "^0.1.7",
     "@types/qrcode": "^1.5.3",
-    "@types/react": "^19.0.2",
-    "@types/react-dom": "^19.0.2",
+    "@types/react": "^18.3.18",
+    "@types/react-dom": "^18.3.5",
     "@types/sinon": "^17.0.2",
     "@types/upng-js": "^2.1.2",
     "@typescript-eslint/eslint-plugin": "^4.2.0",
@@ -107,6 +109,9 @@
     "@codemirror/view": "^6.35.3",
     "@lezer/highlight": "^1.1.6",
     "@lezer/lr": "^1.3.7",
+    "@react-native/babel-preset": "^0.76.5",
+    "@react-native/metro-babel-transformer": "^0.76.5",
+    "@react-native/typescript-config": "^0.76.5",
     "aws-cdk-lib": "^2.83.1",
     "codemirror": "^6.0.1",
     "constructs": "^10.2.49",
@@ -126,12 +131,13 @@
     "mock-match-media": "^0.4.2",
     "openai": "^3.2.1",
     "papaparse": "^5.4.1",
-    "preact-render-to-string": "^5.1.19",
     "prismjs": "^1.25.0",
     "pulltorefreshjs": "^0.1.22",
     "qrcode": "^1.5.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-native": "^0.76.5",
+    "react-native-web": "^0.19.13",
     "rollbar": "^2.26.2",
     "rsa-pem-from-mod-exp": "^0.8.5",
     "uplot": "^1.6.23",
