--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@playwright/test": "^1.44.0",
     "@react-native-community/cli": "^15.1.3",
     "@react-native/metro-config": "^0.76.5",
+    "@svgr/cli": "^8.1.0",
     "@types/aws-lambda": "^8.10.72",
     "@types/chai": "^4.3.11",
     "@types/cookie": "^0.3.3",
@@ -69,6 +70,7 @@
     "aws-sdk": "^2.1395.0",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^9.1.2",
+    "babel-plugin-react-native-web": "^0.19.13",
     "chai": "^4.3.10",
     "copy-webpack-plugin": "^5.1.1",
     "css-loader": "^3.4.2",
@@ -99,6 +101,7 @@
     "webpack-dev-server": "^4.11.1"
   },
   "dependencies": {
+    "@babel/plugin-transform-flow-strip-types": "^7.25.9",
     "@codemirror/autocomplete": "^6.18.3",
     "@codemirror/commands": "^6.7.1",
     "@codemirror/lang-markdown": "^6.3.1",
@@ -112,6 +115,9 @@
     "@react-native/babel-preset": "^0.76.5",
     "@react-native/metro-babel-transformer": "^0.76.5",
     "@react-native/typescript-config": "^0.76.5",
+    "@react-navigation/bottom-tabs": "^7.2.0",
+    "@react-navigation/native": "^7.0.14",
+    "@react-navigation/native-stack": "^7.2.0",
     "aws-cdk-lib": "^2.83.1",
     "codemirror": "^6.0.1",
     "constructs": "^10.2.49",
@@ -137,11 +143,17 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-native": "^0.76.5",
+    "react-native-safe-area-context": "^5.0.0",
+    "react-native-screens": "^4.4.0",
+    "react-native-svg": "^15.10.1",
+    "react-native-svg-web": "^1.0.9",
     "react-native-web": "^0.19.13",
+    "react-native-webview": "^13.12.5",
     "rollbar": "^2.26.2",
     "rsa-pem-from-mod-exp": "^0.8.5",
     "uplot": "^1.6.23",
     "upng-js": "^2.1.0",
+    "url-loader": "^4.1.1",
     "yatro": "^0.2.7"
   }
 }
