--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "@11ty/eleventy-plugin-syntaxhighlight": "^3.0.6",
     "@babel/core": "^7.20.12",
     "@babel/preset-env": "^7.20.2",
-    "@fullhuman/postcss-purgecss": "^2.1.0",
+    "@fullhuman/postcss-purgecss": "^7.0.2",
     "@lezer/generator": "^1.2.3",
     "@playwright/test": "^1.44.0",
     "@react-native-community/cli": "^15.1.3",
@@ -66,15 +66,15 @@
     "@types/upng-js": "^2.1.2",
     "@typescript-eslint/eslint-plugin": "^4.2.0",
     "@typescript-eslint/parser": "^4.2.0",
-    "autoprefixer": "^9.7.4",
+    "autoprefixer": "^10.4.20",
     "aws-sdk": "^2.1395.0",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^9.1.2",
     "babel-plugin-react-native-web": "^0.19.13",
     "chai": "^4.3.10",
     "copy-webpack-plugin": "^5.1.1",
-    "css-loader": "^3.4.2",
-    "cssnano": "^4.1.10",
+    "css-loader": "^7.1.2",
+    "cssnano": "^7.0.6",
     "csv": "^6.2.7",
     "cypress": "^5.1.0",
     "cypress-terminal-report": "^2.0.0",
@@ -86,11 +86,12 @@
     "markdown-styles": "^3.1.10",
     "mocha": "^10.2.0",
     "node-fetch": "^2.6.1",
-    "postcss-loader": "^3.0.0",
+    "postcss": "^8.4.49",
+    "postcss-loader": "^8.1.1",
     "prettier": "^2.0.5",
     "sinon": "^17.0.1",
     "style-loader": "^1.1.3",
-    "tailwindcss": "^1.2.0",
+    "tailwindcss": "^3.4.17",
     "ts-loader": "^6.2.1",
     "ts-node": "^8.6.2",
     "ts-node-dev": "^1.1.6",
