--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "blog": "eleventy",
     "build:server": "webpack --config webpack.server.config.js",
     "build:dev": "webpack",
+    "tsnode": "npx ts-node --require tsconfig-paths/register --require ./tsnodedev.js",
+    "tsnodedev": "npx ts-node-dev --require tsconfig-paths/register --require ./tsnodedev.js --inspect --files --poll -T",
     "lint": "tsc --listFiles | grep -v 'node_modules' | xargs eslint",
     "start": "webpack-dev-server",
-    "start:server": "IS_DEV=true IS_LOCAL=true IMGPREFIX=lambda/ ts-node-dev --inspect --files --poll -T devserver.ts",
-    "start:server:prod": "IS_DEV=false IS_LOCAL=false IMGPREFIX=lambda/ npm run ts-node-dev --inspect --files --poll -T devserver.ts",
+    "start:server": "IS_DEV=true IS_LOCAL=true IMGPREFIX=lambda/ npm run tsnodedev devserver.ts",
+    "start:server:prod": "IS_DEV=false IS_LOCAL=false IMGPREFIX=lambda/ npm run tsnodedev devserver.ts",
     "trust": "sudo security add-trusted-cert -d -r trustRoot -k /Library/Keychains/System.keychain cert/private.crt",
     "start:https": "webpack-dev-server --https --cert cert/private.pem --key cert/private.key --port 8443",
     "migrate": "curl -v -X POST http://local-api.liftosaur.com:3000/api/migrate?key=$KEY",
@@ -33,7 +35,7 @@
     "cdk-deploy": "npm run build:lambda && rm -rf ./dist-lambda/node_modules && cdk deploy --all",
     "test": "mocha -r ts-node/register test/**/*.test.ts",
     "onetest": "TS_NODE_TRANSPILE_ONLY=1 mocha -r ts-node/register",
-    "sitemap": "TS_NODE_TRANSPILE_ONLY=1 ts-node ./src/sitemap.ts",
+    "sitemap": "TS_NODE_TRANSPILE_ONLY=1 npm run tsnode ./src/sitemap.ts",
     "testgen": "playwright codegen --test-id-attribute data-cy 'https://local.liftosaur.com:8080/app/?skipintro=1'"
   },
   "author": "Anton Astashov",
@@ -74,7 +76,6 @@
     "chai": "^4.3.10",
     "copy-webpack-plugin": "^5.1.1",
     "css-loader": "^7.1.2",
-    "cssnano": "^7.0.6",
     "csv": "^6.2.7",
     "cypress": "^5.1.0",
     "cypress-terminal-report": "^2.0.0",
@@ -95,6 +96,7 @@
     "ts-loader": "^6.2.1",
     "ts-node": "^8.6.2",
     "ts-node-dev": "^1.1.6",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^5.6.3",
     "webpack": "^5.75.0",
     "webpack-bundle-analyzer": "^4.7.0",
@@ -136,6 +138,7 @@
     "micromark-extension-gfm": "^0.3.3",
     "mini-css-extract-plugin": "^2.9.2",
     "mock-match-media": "^0.4.2",
+    "nativewind": "^4.1.23",
     "openai": "^3.2.1",
     "papaparse": "^5.4.1",
     "prismjs": "^1.25.0",
@@ -145,6 +148,7 @@
     "react-dom": "^18.3.1",
     "react-native": "^0.76.5",
     "react-native-mmkv": "^3.2.0",
+    "react-native-reanimated": "^3.16.6",
     "react-native-safe-area-context": "^5.0.0",
     "react-native-screens": "^4.4.0",
     "react-native-svg": "^15.10.1",
