--- a/ios/Liftosaur.xcodeproj/xcshareddata/xcschemes/Liftosaur.xcscheme
+++ b/ios/Liftosaur.xcodeproj/xcshareddata/xcschemes/Liftosaur.xcscheme
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "1210"
-   version = "1.3">
+   LastUpgradeVersion = "1610"
+   version = "1.7">
    <BuildAction
       parallelizeBuildables = "YES"
-      buildImplicitDependencies = "YES">
+      buildImplicitDependencies = "YES"
+      buildArchitectures = "Automatic">
       <BuildActionEntries>
          <BuildActionEntry
             buildForTesting = "YES"
@@ -15,9 +16,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "RNapp.app"
-               BlueprintName = "RNapp"
-               ReferencedContainer = "container:RNapp.xcodeproj">
+               BuildableName = "Liftosaur.app"
+               BlueprintName = "Liftosaur"
+               ReferencedContainer = "container:Liftosaur.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -26,16 +27,17 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      shouldUseLaunchSchemeArgsEnv = "YES">
+      shouldUseLaunchSchemeArgsEnv = "YES"
+      shouldAutocreateTestPlan = "YES">
       <Testables>
          <TestableReference
             skipped = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "RNappTests.xctest"
-               BlueprintName = "RNappTests"
-               ReferencedContainer = "container:RNapp.xcodeproj">
+               BuildableName = "LiftosaurTests.xctest"
+               BlueprintName = "LiftosaurTests"
+               ReferencedContainer = "container:Liftosaur.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -55,9 +57,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "RNapp.app"
-            BlueprintName = "RNapp"
-            ReferencedContainer = "container:RNapp.xcodeproj">
+            BuildableName = "Liftosaur.app"
+            BlueprintName = "Liftosaur"
+            ReferencedContainer = "container:Liftosaur.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -72,9 +74,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "RNapp.app"
-            BlueprintName = "RNapp"
-            ReferencedContainer = "container:RNapp.xcodeproj">
+            BuildableName = "Liftosaur.app"
+            BlueprintName = "Liftosaur"
+            ReferencedContainer = "container:Liftosaur.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
