--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,15 @@ cloudflare.*
 **/Pods/
 /vendor/bundle/
 /ios/build
+
+# Android/IntelliJ
+#
+build/
+.idea
+.gradle
+local.properties
+*.iml
+*.hprof
+.cxx/
+*.keystore
+!debug.keystore
