--- a/ios/link-assets-manifest.json
+++ b/ios/link-assets-manifest.json
@@ -2,14 +2,6 @@
   "migIndex": 1,
   "data": [
     {
-      "path": "fonts/Poppins-Black.ttf",
-      "sha1": "645e04c53c6b5b35bce654a811ebce16af8aa721"
-    },
-    {
-      "path": "fonts/Poppins-BlackItalic.ttf",
-      "sha1": "be4ef2aac7775a4b0179c0ecfce6cea8f7783f63"
-    },
-    {
       "path": "fonts/Poppins-Bold.devanagari.woff2",
       "sha1": "560593d4316c9d6aaaee8f6f7f36c31d3e2e9179"
     },
@@ -20,10 +12,6 @@
     {
       "path": "fonts/Poppins-Bold.latin.woff2",
       "sha1": "11b61d2a6f491c94913a7b4d332e90ae53934e63"
-    },
-    {
-      "path": "fonts/Poppins-Bold.ttf",
-      "sha1": "875cf0cecd647bcf22e79d633d868c1b1ec98dfa"
     },
     {
       "path": "fonts/Poppins-BoldItalic.devanagari.woff2",
@@ -38,26 +26,6 @@
       "sha1": "771b9d4bf5e7c7a0c9c72c568ae3f88a7955b0cf"
     },
     {
-      "path": "fonts/Poppins-BoldItalic.ttf",
-      "sha1": "6de8952ca08d27ee77f57347d2cef4b4e26aa78f"
-    },
-    {
-      "path": "fonts/Poppins-ExtraBold.ttf",
-      "sha1": "4b5c0750f073abd576413a0898d3b95adaf199c8"
-    },
-    {
-      "path": "fonts/Poppins-ExtraBoldItalic.ttf",
-      "sha1": "94d3ee3acdbd00e37a715a25f2b5237666b5b8a3"
-    },
-    {
-      "path": "fonts/Poppins-ExtraLight.ttf",
-      "sha1": "85af6582a7e6155917c605f9d3fed68c02b23b06"
-    },
-    {
-      "path": "fonts/Poppins-ExtraLightItalic.ttf",
-      "sha1": "6fa0418f91032680d2d8fe4843009f2c80faa61d"
-    },
-    {
       "path": "fonts/Poppins-Italic.devanagari.woff2",
       "sha1": "39e023bd2af89f4e94f3e312f8218c06c9bd2d71"
     },
@@ -68,26 +36,6 @@
     {
       "path": "fonts/Poppins-Italic.latin.woff2",
       "sha1": "34f0bd7f17cde0f68b41101e6875baf0322e2241"
-    },
-    {
-      "path": "fonts/Poppins-Italic.ttf",
-      "sha1": "e2bfcd56016c3c915221ef1c5fc1a17b0776eb91"
-    },
-    {
-      "path": "fonts/Poppins-Light.ttf",
-      "sha1": "e247a92158e112f8bf7b638c8d95381d66b00dbb"
-    },
-    {
-      "path": "fonts/Poppins-LightItalic.ttf",
-      "sha1": "f76102b361e705751a83b7b22fe954daf1f27dd4"
-    },
-    {
-      "path": "fonts/Poppins-Medium.ttf",
-      "sha1": "283f21b44efbdbf276ba802be2d949a36bbc4233"
-    },
-    {
-      "path": "fonts/Poppins-MediumItalic.ttf",
-      "sha1": "b592c62fdf88c40cfd0f031bba6423b1d4430472"
     },
     {
       "path": "fonts/Poppins-Regular.devanagari.woff2",
@@ -102,10 +50,6 @@
       "sha1": "c5c10e85c00c44254632a9309f6d603020a88f00"
     },
     {
-      "path": "fonts/Poppins-Regular.ttf",
-      "sha1": "fdd3002e7d814ee47c1c1b8487c72c6bbb3a2d00"
-    },
-    {
       "path": "fonts/Poppins-SemiBold.devanagari.woff2",
       "sha1": "d6c9af52f3d7f1cc454c754cf6abf3e0a792d47c"
     },
@@ -116,10 +60,6 @@
     {
       "path": "fonts/Poppins-SemiBold.latin.woff2",
       "sha1": "08df9df236cf27def8f31894c615d3219a81fd81"
-    },
-    {
-      "path": "fonts/Poppins-SemiBold.ttf",
-      "sha1": "8a4ace9392d06bcb7f8ea2f5169b07e4c383a90d"
     },
     {
       "path": "fonts/Poppins-SemiBoldItalic.devanagari.woff2",
@@ -134,20 +74,80 @@
       "sha1": "3f8f5de359309d20268eb8e16bd6f2d59d73db1b"
     },
     {
-      "path": "fonts/Poppins-SemiBoldItalic.ttf",
+      "path": "fonts/iosevka-regular.woff2",
+      "sha1": "822c5b93736e19d57d693d2f5dd52f83c832ef49"
+    },
+    {
+      "path": "fonts/poppins_black.ttf",
+      "sha1": "645e04c53c6b5b35bce654a811ebce16af8aa721"
+    },
+    {
+      "path": "fonts/poppins_blackitalic.ttf",
+      "sha1": "be4ef2aac7775a4b0179c0ecfce6cea8f7783f63"
+    },
+    {
+      "path": "fonts/poppins_bold.ttf",
+      "sha1": "875cf0cecd647bcf22e79d633d868c1b1ec98dfa"
+    },
+    {
+      "path": "fonts/poppins_bolditalic.ttf",
+      "sha1": "6de8952ca08d27ee77f57347d2cef4b4e26aa78f"
+    },
+    {
+      "path": "fonts/poppins_extrabold.ttf",
+      "sha1": "4b5c0750f073abd576413a0898d3b95adaf199c8"
+    },
+    {
+      "path": "fonts/poppins_extrabolditalic.ttf",
+      "sha1": "94d3ee3acdbd00e37a715a25f2b5237666b5b8a3"
+    },
+    {
+      "path": "fonts/poppins_extralight.ttf",
+      "sha1": "85af6582a7e6155917c605f9d3fed68c02b23b06"
+    },
+    {
+      "path": "fonts/poppins_extralightitalic.ttf",
+      "sha1": "6fa0418f91032680d2d8fe4843009f2c80faa61d"
+    },
+    {
+      "path": "fonts/poppins_italic.ttf",
+      "sha1": "e2bfcd56016c3c915221ef1c5fc1a17b0776eb91"
+    },
+    {
+      "path": "fonts/poppins_light.ttf",
+      "sha1": "e247a92158e112f8bf7b638c8d95381d66b00dbb"
+    },
+    {
+      "path": "fonts/poppins_lightitalic.ttf",
+      "sha1": "f76102b361e705751a83b7b22fe954daf1f27dd4"
+    },
+    {
+      "path": "fonts/poppins_medium.ttf",
+      "sha1": "283f21b44efbdbf276ba802be2d949a36bbc4233"
+    },
+    {
+      "path": "fonts/poppins_mediumitalic.ttf",
+      "sha1": "b592c62fdf88c40cfd0f031bba6423b1d4430472"
+    },
+    {
+      "path": "fonts/poppins_regular.ttf",
+      "sha1": "fdd3002e7d814ee47c1c1b8487c72c6bbb3a2d00"
+    },
+    {
+      "path": "fonts/poppins_semibold.ttf",
+      "sha1": "8a4ace9392d06bcb7f8ea2f5169b07e4c383a90d"
+    },
+    {
+      "path": "fonts/poppins_semibolditalic.ttf",
       "sha1": "0c8bed0a5942b2388d36b11c115685d9f01700b0"
     },
     {
-      "path": "fonts/Poppins-Thin.ttf",
+      "path": "fonts/poppins_thin.ttf",
       "sha1": "09ba4dcd5509c8085bf88c665dcc51cbdfced27b"
     },
     {
-      "path": "fonts/Poppins-ThinItalic.ttf",
+      "path": "fonts/poppins_thinitalic.ttf",
       "sha1": "fb8fccca21550e71135f92bbaf8a2e8a12c90465"
-    },
-    {
-      "path": "fonts/iosevka-regular.woff2",
-      "sha1": "822c5b93736e19d57d693d2f5dd52f83c832ef49"
     }
   ]
 }
