--- a/package.json
+++ b/package.json
@@ -115,12 +115,17 @@
     "@codemirror/view": "^6.35.3",
     "@lezer/highlight": "^1.1.6",
     "@lezer/lr": "^1.3.7",
+    "@react-native-community/blur": "^4.4.1",
+    "@react-native-community/checkbox": "^0.5.17",
+    "@react-native-community/datetimepicker": "^8.2.0",
+    "@react-native-picker/picker": "^2.10.2",
     "@react-native/babel-preset": "^0.76.5",
     "@react-native/metro-babel-transformer": "^0.76.5",
     "@react-native/typescript-config": "^0.76.5",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
+    "@shopify/react-native-skia": "^1.8.0",
     "aws-cdk-lib": "^2.83.1",
     "codemirror": "^6.0.1",
     "constructs": "^10.2.49",
@@ -147,7 +152,9 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-native": "^0.76.5",
+    "react-native-gesture-handler": "^2.21.2",
     "react-native-mmkv": "^3.2.0",
+    "react-native-picker-select": "^9.3.1",
     "react-native-reanimated": "^3.16.6",
     "react-native-safe-area-context": "^5.0.0",
     "react-native-screens": "^4.4.0",
@@ -160,6 +167,7 @@
     "uplot": "^1.6.23",
     "upng-js": "^2.1.0",
     "url-loader": "^4.1.1",
+    "victory-native": "^41.14.0",
     "yatro": "^0.2.7"
   }
 }
