--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@11ty/eleventy-plugin-syntaxhighlight": "^3.0.6",
     "@babel/core": "^7.20.12",
     "@babel/preset-env": "^7.20.2",
+    "@babel/preset-react": "^7.26.3",
     "@fullhuman/postcss-purgecss": "^7.0.2",
     "@lezer/generator": "^1.2.3",
     "@playwright/test": "^1.44.0",
@@ -152,6 +153,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-native": "^0.76.5",
+    "react-native-animateable-text": "^0.14.2",
     "react-native-gesture-handler": "^2.21.2",
     "react-native-mmkv": "^3.2.0",
     "react-native-picker-select": "^9.3.1",
