--- a/package.json
+++ b/package.json
@@ -102,6 +102,8 @@
     "sinon": "^17.0.1",
     "style-loader": "^1.1.3",
     "tailwindcss": "^3.4.17",
+    "terser-webpack-plugin": "^5.3.11",
+    "thread-loader": "^4.0.4",
     "ts-loader": "^6.2.1",
     "ts-node": "^8.6.2",
     "ts-node-dev": "^1.1.6",
