--- a/tailwind.config.json
+++ b/tailwind.config.json
@@ -170,6 +170,96 @@
           "800": "#38A169",
           "900": "#2A774E",
           "main": "#38A169"
+        },
+        "yellowv3": {
+          "50": "#FFF8EC",
+          "100": "#FFF2DB",
+          "200": "#FFE6B4",
+          "300": "#FFDD7E",
+          "400": "#FFD820",
+          "500": "#FFB544",
+          "600": "#DD8E02",
+          "700": "#B76506",
+          "800": "#954D0B",
+          "900": "#7A3F0D",
+          "950": "#462102",
+          "1000": "#311804",
+          "main": "#B76506"
+        },
+        "greenv3": {
+          "50": "#EBFEF5",
+          "100": "#CEFCE5",
+          "200": "#A3F7D0",
+          "300": "#67EEB8",
+          "400": "#2BDC9B",
+          "500": "#06C383",
+          "600": "#009F6C",
+          "700": "#007F5A",
+          "800": "#016448",
+          "900": "#02523D",
+          "950": "#002E23",
+          "1000": "#02241C",
+          "main": "#007F5A"
+        },
+        "bluev3": {
+          "50": "#EFF6FF",
+          "100": "#DDECFF",
+          "200": "#BFDBFE",
+          "300": "#93C5FD",
+          "400": "#60A5FA",
+          "500": "#3B82F6",
+          "600": "#2563EB",
+          "700": "#1D4ED8",
+          "800": "#1E40AF",
+          "900": "#1E3A8A",
+          "950": "#172554",
+          "1000": "#06133F",
+          "main": "#1D4ED8"
+        },
+        "grayv3": {
+          "50": "#F6F7F8",
+          "100": "#EAECEF",
+          "200": "#D2D8DE",
+          "300": "#C2C9D0",
+          "400": "#A1ADB9",
+          "500": "#8A97A7",
+          "600": "#788499",
+          "700": "#6C7589",
+          "800": "#5B6172",
+          "900": "#4B515D",
+          "950": "#1D2D35",
+          "1000": "#171718",
+          "main": "#6C7589"
+        },
+        "purplev3": {
+          "50": "#FAF8FF",
+          "100": "#F3EEFF",
+          "200": "#DAD0F5",
+          "300": "#CCC1F9",
+          "400": "#A48BFA",
+          "500": "#8356F6",
+          "600": "#783AED",
+          "700": "#6928D9",
+          "800": "#5721B6",
+          "900": "#491D95",
+          "950": "#2C1065",
+          "1000": "#130E2F",
+          "main": "#6928D9"
+        },
+        "redv3": {
+          "50": "#FFF3F1",
+          "100": "#FFE6E1",
+          "200": "#FFD1C7",
+          "300": "#FFB0A0",
+          "400": "#FF8066",
+          "500": "#FF543E",
+          "600": "#ED2E15",
+          "700": "#C8220D",
+          "800": "#A5200F",
+          "900": "#882114",
+          "950": "#4B0C04",
+          "1000": "#340802",
+          "main": "#C8220D"
         }
       },
       "fontFamily": { "sans": ["Poppins", "sans-serif"], "serif": ["Poppins", "serif"] },
