--- a/tailwind.config.json
+++ b/tailwind.config.json
@@ -1,5 +1,5 @@
 {
-  "content": ["./src/**/*.tsx"],
+  "content": ["./src/**/*.tsx", "./src/utils/*.ts"],
   "theme": {
     "extend": {
       "colors": {
@@ -203,39 +203,40 @@
         },
         "bluev3": {
           "50": "#EFF6FF",
-          "100": "#DDECFF",
-          "200": "#BFDBFE",
-          "300": "#93C5FD",
-          "400": "#60A5FA",
-          "500": "#3B82F6",
-          "600": "#2563EB",
-          "700": "#1D4ED8",
-          "800": "#1E40AF",
-          "900": "#1E3A8A",
-          "950": "#172554",
+          "100": "#D7F2F6",
+          "200": "#B4E5ED",
+          "300": "#80D1E0",
+          "400": "#45B3CB",
+          "500": "#45B3CB",
+          "600": "#28839F",
+          "700": "#24637A",
+          "800": "#234656",
+          "900": "#234656",
+          "950": "#122D3A",
           "1000": "#06133F",
-          "main": "#1D4ED8"
+          "main": "#28839F"
         },
         "grayv3": {
-          "50": "#F6F7F8",
-          "100": "#EAECEF",
-          "200": "#D2D8DE",
-          "300": "#C2C9D0",
-          "400": "#A1ADB9",
-          "500": "#8A97A7",
-          "600": "#788499",
-          "700": "#6C7589",
-          "800": "#5B6172",
-          "900": "#4B515D",
-          "950": "#1D2D35",
+          "50": "#F4F6F7",
+          "100": "#E3E8EA",
+          "200": "#C9D1D8",
+          "300": "#A4B0BC",
+          "400": "#778999",
+          "500": "#607284",
+          "600": "#4F5C6B",
+          "700": "#3C5063",
+          "800": "#364756",
+          "900": "#363a43",
+          "950": "#21242b",
           "1000": "#171718",
           "main": "#6C7589"
         },
         "purplev3": {
           "50": "#FAF8FF",
           "100": "#F3EEFF",
-          "200": "#DAD0F5",
-          "300": "#CCC1F9",
+          "150": "#E6DDFF",
+          "200": "#DACCFF",
+          "300": "#B9A9FF",
           "400": "#A48BFA",
           "500": "#8356F6",
           "600": "#783AED",
@@ -244,7 +245,7 @@
           "900": "#491D95",
           "950": "#2C1065",
           "1000": "#130E2F",
-          "main": "#6928D9"
+          "main": "#8356F6"
         },
         "redv3": {
           "50": "#FFF3F1",
