fix: added a flag to control the removal of devServer when running locally using dev-start / start

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "build:server": "webpack --config webpack.server.config.js",
     "build:dev": "webpack",
     "lint": "tsc --listFiles | grep -v 'node_modules' | xargs eslint",
-    "start": "webpack-dev-server",
+    "start": "webpack --env isDevServer=false",
+    "dev-start": "webpack-dev-server --env isDevServer=true",
     "start:server": "IS_DEV=true IS_LOCAL=true IMGPREFIX=lambda/ ts-node-dev --inspect --files --poll -T devserver.ts",
     "start:server:prod": "IS_DEV=false IS_LOCAL=false IMGPREFIX=lambda/ ts-node-dev --inspect --files --poll -T devserver.ts",
     "trust": "sudo security add-trusted-cert -d -r trustRoot -k /Library/Keychains/System.keychain cert/private.crt",
