--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "App for tracking weight lifting progress",
   "main": "dist/index.js",
   "scripts": {
-    "build": "npm run plannerhighlighter && npm run blog && npm run docs && npm run sitemap && NODE_ENV=production npm run build:dev && npm run upload-source-maps",
-    "build:stage": "npm run plannerhighlighter && npm run blog && npm run docs && npm run sitemap && NODE_ENV=production STAGE=1 npm run build:dev",
+    "build": "npm run build:markdown && npm run plannerhighlighter && npm run blog && npm run docs && npm run sitemap && NODE_ENV=production npm run build:dev && npm run upload-source-maps",
+    "build:stage": "npm run build:markdown && npm run plannerhighlighter && npm run blog && npm run docs && npm run sitemap && NODE_ENV=production STAGE=1 npm run build:dev",
+    "build:markdown": "node scripts/build-markdown.js",
     "analyze": "open dist/report.html",
     "docs": "generate-md --layout ./src/docs/layout/ --input ./src/docs/content/ --output ./docs",
     "plannerhighlighter": "tsc --skipLibCheck --outDir dist-plannerhighlighter ./src/pages/planner/plannerHighlighter.ts",
@@ -13,8 +14,8 @@
     "build:server": "webpack --config webpack.server.config.js",
     "build:dev": "webpack",
     "lint": "tsc --listFiles | grep -v 'node_modules' | xargs eslint",
-    "start": "webpack-dev-server",
-    "start:server": "IS_DEV=true IS_LOCAL=true IMGPREFIX=lambda/ ts-node-dev --inspect --files --poll -T devserver.ts",
+    "start": "npm run build:markdown && webpack-dev-server",
+    "start:server": "npm run build:markdown && IS_DEV=true IS_LOCAL=true IMGPREFIX=lambda/ ts-node-dev --inspect --files --poll -T devserver.ts",
     "start:server:prod": "IS_DEV=false IS_LOCAL=false IMGPREFIX=lambda/ ts-node-dev --inspect --files --poll -T devserver.ts",
     "trust": "sudo security add-trusted-cert -d -r trustRoot -k /Library/Keychains/System.keychain cert/private.crt",
     "start:https": "webpack-dev-server --https --cert cert/private.pem --key cert/private.key --port 8443",
@@ -23,7 +24,7 @@
     "synctoprod": "curl -v -X POST http://local-api.liftosaur.com:3000/api/synctoprod?ids=$IDS\\&key=$KEY",
     "synctodev": "curl -v -X POST http://local-api.liftosaur.com:3000/api/synctodev?ids=$IDS\\&key=$KEY",
     "copy:lambda": "mkdir -p ./dist-lambda && cp ./lambda/package*.json ./dist-lambda && cp -r ./lambda/images ./dist-lambda",
-    "build:lambda": "npm run copy:lambda && tsc -p tsconfig.lambda.json",
+    "build:lambda": "npm run build:markdown && npm run copy:lambda && tsc -p tsconfig.lambda.json",
     "watch:lambda": "npm run copy:lambda && tsc -p tsconfig.lambda.json --watch",
     "build-and-start:lambda": "npm run build:lambda && npm run start:lambda",
     "start:lambda": "cdk-synth && sam-start-api",
