--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "@types/pulltorefreshjs": "^0.1.7",
     "@types/qrcode": "^1.5.3",
     "@types/sinon": "^17.0.2",
+    "@types/turndown": "^5.0.5",
     "@types/upng-js": "^2.1.2",
     "@typescript-eslint/eslint-plugin": "^8.26.0",
     "@typescript-eslint/parser": "^8.26.0",
@@ -91,6 +92,7 @@
     "ts-loader": "^6.2.1",
     "ts-node": "^8.6.2",
     "ts-node-dev": "^1.1.6",
+    "turndown": "^7.2.0",
     "typescript": "^5.7.3",
     "webpack": "^5.75.0",
     "webpack-bundle-analyzer": "^4.7.0",
