--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "blog": "eleventy",
     "build:server": "webpack --config webpack.server.config.js",
     "build:dev": "webpack",
-    "lint": "tsc --noEmit",
+    "check": "tsc --noEmit",
+    "lint": "eslint . --ext .ts,.tsx --fix",
     "start": "npm run build:markdown && webpack-dev-server",
     "start:server": "npm run build:markdown && IS_DEV=true IS_LOCAL=true IMGPREFIX=lambda/ ts-node-dev --inspect --files --poll -T devserver.ts",
     "start:server:prod": "IS_DEV=false IS_LOCAL=false IMGPREFIX=lambda/ ts-node-dev --inspect --files --poll -T devserver.ts",
