Add some logging to watch bundle

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,6 +27,7 @@
   "include": [
     "src/**/*",
     "server/**/*",
+    "scripts/**/*",
     "lambda/**/*",
     "liftosaur-cdk/**/*",
     "test/**/*",
