--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "App for tracking weight lifting progress",
   "main": "dist/index.js",
   "scripts": {
-    "build": "npm run build:markdown && npm run plannerhighlighter && npm run blog && npm run docs && npm run sitemap && NODE_ENV=production npm run build:dev && npm run upload-source-maps",
+    "build": "npm run build:prepare && npm run upload-source-maps",
+    "build:prepare": "npm run build:markdown && npm run plannerhighlighter && npm run blog && npm run docs && npm run sitemap && NODE_ENV=production npm run build:dev",
     "build:stage": "npm run build:markdown && npm run plannerhighlighter && npm run blog && npm run docs && npm run sitemap && NODE_ENV=production STAGE=1 npm run build:dev",
     "build:markdown": "node scripts/build-markdown.js",
     "build:semantic": "node generate-semantic-colors.js",
