Fix paths in the orchestrators

--- a/scripts/com.liftosaur.rollbar-orchestrator.plist
+++ b/scripts/com.liftosaur.rollbar-orchestrator.plist
@@ -25,7 +25,7 @@
     <key>EnvironmentVariables</key>
     <dict>
         <key>PATH</key>
-        <string>/Users/anton/.nvm/versions/node/v20.10.0/bin:/usr/local/bin:/usr/bin:/bin</string>
+        <string>/opt/homebrew/bin:/usr/local/bin:/usr/bin:/bin</string>
     </dict>
 
     <key>StandardOutPath</key>
