--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "css-loader": "^3.4.2",
     "cssnano": "^7.0.6",
     "csv": "^6.2.7",
+    "esbuild-loader": "^4.4.2",
     "eslint": "^9.22.0",
     "eslint-config-prettier": "^10.1.1",
     "eslint-plugin-prettier": "^5.2.3",
@@ -106,7 +107,6 @@
     "turndown": "^7.2.0",
     "typescript": "^5.7.3",
     "webpack": "^5.75.0",
-    "webpack-bundle-analyzer": "^4.7.0",
     "webpack-cli": "^5.0.1",
     "webpack-dev-server": "^4.11.1"
   },
