--- a/aihelpers/rollbar/launchd/com.liftosaur.pr-feedback-orchestrator.plist
+++ b/aihelpers/rollbar/launchd/com.liftosaur.pr-feedback-orchestrator.plist
@@ -8,7 +8,8 @@
     <key>ProgramArguments</key>
     <array>
         <string>/bin/bash</string>
-        <string>/Users/anton/projects/liftosaur/scripts/pr-feedback-orchestrator-runner.sh</string>
+        <string>/Users/anton/projects/liftosaur/aihelpers/rollbar/docker-orchestrator-runner.sh</string>
+        <string>pr-feedback</string>
     </array>
 
     <key>WorkingDirectory</key>
