--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,6 +32,7 @@
     "liftosaur-cdk/**/*",
     "test/**/*",
     "tests/**/*",
+    "aihelpers/**/*",
     "devserver.ts",
     "playwright.config.ts"
   ]
