--- a/lambda/package.json
+++ b/lambda/package.json
@@ -27,8 +27,9 @@
     "jsonwebtoken": "^8.5.1",
     "lens-shmens": "^1.4.0",
     "micro-memoize": "^4.1.2",
-    "micromark": "^2.11.4",
-    "micromark-extension-gfm": "^0.3.3",
+    "micromark": "^4.0.2",
+    "micromark-extension-directive": "^4.0.0",
+    "micromark-extension-gfm": "^3.0.0",
     "node-fetch": "^2.6.1",
     "openai": "^3.2.1",
     "papaparse": "^5.4.1",
