--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "eslint-plugin-prettier": "^5.2.3",
     "globals": "^16.3.0",
     "googleapis": "^161.0.0",
+    "gray-matter": "^4.0.3",
     "jimp": "^0.16.1",
     "knip": "^5.44.0",
     "lambda-local": "^1.7.4",
@@ -134,8 +135,9 @@
     "jsonwebtoken": "^8.5.1",
     "lens-shmens": "^1.4.0",
     "micro-memoize": "^4.1.2",
-    "micromark": "^2.11.4",
-    "micromark-extension-gfm": "^0.3.3",
+    "micromark": "^4.0.2",
+    "micromark-extension-directive": "^4.0.0",
+    "micromark-extension-gfm": "^3.0.0",
     "mini-css-extract-plugin": "^2.9.2",
     "mock-match-media": "^0.4.2",
     "openai": "^3.2.1",
