--- a/lambda/package.json
+++ b/lambda/package.json
@@ -15,6 +15,7 @@
     "@codemirror/state": "^6.5.0",
     "@codemirror/view": "^6.35.3",
     "@lezer/lr": "^1.3.4",
+    "@types/markdown-it": "^14.1.2",
     "aws-sdk": "^2.1603.0",
     "cookie": "^0.4.1",
     "deepmerge": "^4.3.1",
@@ -26,9 +27,8 @@
     "jimp": "^0.16.1",
     "jsonwebtoken": "^8.5.1",
     "lens-shmens": "^1.4.0",
+    "markdown-it": "^14.1.1",
     "micro-memoize": "^4.1.2",
-    "micromark": "^2.11.4",
-    "micromark-extension-gfm": "^0.3.3",
     "node-fetch": "^2.6.1",
     "openai": "^3.2.1",
     "papaparse": "^5.4.1",
@@ -46,8 +46,11 @@
     "zingtouch": "^1.0.6"
   },
   "devDependencies": {
+    "@types/markdown-it-container": "^4.0.0",
     "@types/node-fetch": "^2.6.2",
     "@types/papaparse": "^5.3.14",
-    "@types/turndown": "^5.0.5"
+    "@types/turndown": "^5.0.5",
+    "gray-matter": "^4.0.3",
+    "markdown-it-container": "^4.0.0"
   }
 }
