--- a/package.json
+++ b/package.json
@@ -121,6 +121,7 @@
     "@codemirror/view": "^6.35.3",
     "@lezer/highlight": "^1.1.6",
     "@lezer/lr": "^1.3.7",
+    "@types/markdown-it": "^14.1.2",
     "aws-cdk-lib": "^2.83.1",
     "codemirror": "^6.0.1",
     "constructs": "^10.2.49",
@@ -133,9 +134,8 @@
     "io-ts": "^2.2.4",
     "jsonwebtoken": "^8.5.1",
     "lens-shmens": "^1.4.0",
+    "markdown-it": "^14.1.1",
     "micro-memoize": "^4.1.2",
-    "micromark": "^2.11.4",
-    "micromark-extension-gfm": "^0.3.3",
     "mini-css-extract-plugin": "^2.9.2",
     "mock-match-media": "^0.4.2",
     "openai": "^3.2.1",
