Convert programs to md

--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "npm run ensure:localdomain && npm run build:prepare && npm run upload-source-maps",
-    "build:prepare": "npm run ensure:localdomain && npm run build:markdown && npm run plannerhighlighter && npm run blog && npm run docs && npm run sitemap && NODE_ENV=production npm run build:dev",
-    "build:stage": "npm run ensure:localdomain && npm run build:markdown && npm run plannerhighlighter && npm run blog && npm run docs && npm run sitemap && NODE_ENV=production STAGE=1 npm run build:dev",
+    "build:prepare": "npm run ensure:localdomain && npm run build:markdown && npm run build:programs && npm run plannerhighlighter && npm run blog && npm run docs && npm run sitemap && NODE_ENV=production npm run build:dev",
+    "build:stage": "npm run ensure:localdomain && npm run build:markdown && npm run build:programs && npm run plannerhighlighter && npm run blog && npm run docs && npm run sitemap && NODE_ENV=production STAGE=1 npm run build:dev",
     "ensure:localdomain": "test -f localdomain.js || cp localdomain.default.js localdomain.js",
     "build:markdown": "node scripts/build-markdown.js",
+    "build:programs": "TS_NODE_TRANSPILE_ONLY=1 ts-node scripts/build-programs.ts",
     "build:semantic": "node generate-semantic-colors.js",
     "analyze": "open dist/report.html",
     "docs": "generate-md --layout ./src/docs/layout/ --input ./src/docs/content/ --output ./docs",
@@ -19,7 +20,7 @@
     "check": "tsc --noEmit",
     "grammar:planner": "lezer-generator --output ./src/pages/planner/plannerExerciseParser.ts ./src/pages/planner/plannerExercise.grammar",
     "lint": "eslint . --fix",
-    "start": "npm run build:markdown && webpack-dev-server",
+    "start": "npm run build:markdown && npm run build:programs && webpack-dev-server",
     "start:server": "npm run build:markdown && IS_DEV=true IS_LOCAL=true IMGPREFIX=lambda/ ts-node-dev --inspect --files --poll -T devserver.ts",
     "start:server:prod": "IS_DEV=false IS_LOCAL=false IMGPREFIX=lambda/ ts-node-dev --inspect --files --poll -T devserver.ts",
     "trust": "sudo security add-trusted-cert -d -r trustRoot -k /Library/Keychains/System.keychain cert/private.crt",
@@ -29,7 +30,7 @@
     "synctoprod": "curl -v -X POST http://local-api.liftosaur.com:3000/api/synctoprod?ids=$IDS\\&key=$KEY",
     "synctodev": "curl -v -X POST http://local-api.liftosaur.com:3000/api/synctodev?ids=$IDS\\&key=$KEY",
     "copy:lambda": "mkdir -p ./dist-lambda && cp ./lambda/package*.json ./dist-lambda && cp -r ./lambda/images ./dist-lambda",
-    "build:lambda": "npm run build:markdown && npm run copy:lambda && tsc -p tsconfig.lambda.json",
+    "build:lambda": "npm run build:markdown && npm run build:programs && npm run copy:lambda && tsc -p tsconfig.lambda.json",
     "watch:lambda": "npm run copy:lambda && tsc -p tsconfig.lambda.json --watch",
     "build-and-start:lambda": "npm run build:lambda && npm run start:lambda",
     "start:lambda": "cdk-synth && sam-start-api",
@@ -64,6 +65,7 @@
     "@types/cookie": "^0.3.3",
     "@types/deepmerge": "^2.2.0",
     "@types/jsonwebtoken": "^8.3.9",
+    "@types/markdown-it-container": "^4.0.0",
     "@types/mocha": "^10.0.6",
     "@types/node": "^22.13.1",
     "@types/papaparse": "^5.3.7",
@@ -90,9 +92,11 @@
     "eslint-plugin-prettier": "^5.2.3",
     "globals": "^16.3.0",
     "googleapis": "^161.0.0",
+    "gray-matter": "^4.0.3",
     "jimp": "^0.16.1",
     "knip": "^5.44.0",
     "lambda-local": "^1.7.4",
+    "markdown-it-container": "^4.0.0",
     "markdown-styles": "^3.1.10",
     "mocha": "^10.2.0",
     "node-fetch": "^2.6.1",
